frontend/src/components/listing/listing.css
.listing-index-container {
    margin: 0 auto;
    max-width: 1400px;
    display: flex;
    flex-direction: column;
}

.listing-header {
    font-size: 26px;
    display: flex;
    justify-content: center;
    font-weight: 600;
    font-family: Arial, Helvetica, sans-serif;
}

.listing-grid-container {
   display: inline-block;
   /* flex: wrap; */
   justify-content:space-around;
  text-align: justify;
}

.listing-link {
  display: inline-block;
  margin-bottom: 8px;
  width: calc(50% - 4px);
  margin-right: 8px;
  text-decoration: none;
  color: black;
  font-family: 'Taviraj', serif;
}

.listing-link:nth-of-type(2n) {
  margin-right: 0;
}

@media screen and (min-width: 50em) {
  .listing-link  {
    width: calc(20% - 6px);
  }
  
  .listing-link:nth-of-type(2n) {
    margin-right: 4px;
  }
  
  .listing-link:nth-of-type(4n) {
    margin-right: 0;
  }
}

.listing-link:hover img {
    transform: scale(1.15);
}

.list-item-container {
   margin: 0;
  overflow: hidden;
}

figcaption {
    margin-top: 25px;
    text-align: center;
    text-transform: uppercase;
    width: 250px;
    justify-content: space-evenly;

}

.listing-thumbnail{
  border: none;
  width: 250px;
  height: 250px;
  display: block;
  background: #ccc;
  transition: transform .2s ease-in-out;
  object-fit: fill;

   text-align: center;
}

.free-food {
  background-color: lightgreen;
  text-transform: none;
  padding: 2px;
  border-radius: 3px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 12px;
}

.listing-show-container {
  margin: 0 auto;
  max-width: 1400px;
}

.listing-show-content {
  padding-top: 32px;
  display: flex;
}

.listing-show-left-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 60%;
}

.listing-show-right-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.listing-show-image {
  width: 700px;
  height: 550px;
  display: flex;
  justify-content: center;
}

.listing-show-image img {
  object-fit: cover;
  overflow: hidden;
}

.iframe {
  width: 600px;
  height: 450px;
}

